# draftail_text_utils

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  justfile  package-lock.json  package.json  pyproject.toml  release-please-config.json  stylelint.config.mjs  testmanage.py
.github/workflows/: codeql-analysis.yml  nightly.yml  publish.yml  template.yml  test.yml  zizmor.yml
demo/demo/settings/: base.py
demo/demo/templates/: base.html
docs/: README.md  configuration.md
src/draftail_text_utils/: __init__.py  apps.py  conf.py  wagtail_hooks.py
src/draftail_text_utils/rich_text/: base.py  font_family.py  font_size.py  highlight_color.py  link.py  text_alignment.py  text_color.py  text_style.py
src/draftail_text_utils/static/draftail_text_utils/css/: color.css  common.css  draftail_text_utils.css  font_family.css  font_size.css  highlight_color.css  page.css  text_alignment.css  text_color.css
src/draftail_text_utils/static/draftail_text_utils/js/: common.js  font_family.js  font_size.js  font_size_entity.js  highlight_color.js  highlight_color_entity.js  styled_link_source.js  text_alignment.js  text_color.js  text_color_entity.js  text_style_entity.js
src/draftail_text_utils/templates/draftail_text_utils/admin/: summary.html
src/draftail_text_utils/templatetags/: draftail_text_utils_tags.py
src/draftail_text_utils/test/: apps.py  settings.py
tests/: conftest.py  test_base.py  test_conf.py  test_rich_text.py
